--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,16 @@
+@font-face{
+  font-family:'iCiel-Medium';
+  src: local('iCielMedium'), url('./font/iCiel-Medium.ttf') format('truetype');
+  font-weight: normal;
+}
+
 *{
   margin: 0;
 }
 body {
+  background-color: lightgray;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'iCielMedium',-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
