--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,16 @@
 @font-face{
-  font-family:'iCiel-Medium';
-  src: local('iCielMedium'), url('./font/iCiel-Medium.ttf') format('truetype');
-  font-weight: normal;
+
+    font-family: 'iCielMedium';
+    src: local('iCielMedium'), url('/src/font/iCiel-Medium.ttf') format('truetype');
+    font-weight: normal;
+
 }
 
 *{
   margin: 0;
 }
 body {
-  background-color: lightgray;
+
   margin: 0;
   font-family: 'iCielMedium',-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
