--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -1,9 +1,12 @@
-.item {
- 
-    width: 100vw;
+.item { 
+    margin: 0;
+    padding: 0;
+    width: 100%;
     height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
+
     justify-content: center;
     align-items: center;
     display: flex;
@@ -17,7 +20,10 @@
     flex-direction: column;
     align-items: center;
     position: absolute;
-    top: 20%;
+    top: 16%;
+}
+.item-title>div{
+    font-size: 40px;
 }
 
 .item-buttons{
