--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,8 +5,9 @@
     background: none;
     z-index: 100;
     display: flex;
-    width: 100vw;
+    width: 100%;
     top: 0;
+
 
 }
 
@@ -35,7 +36,7 @@
     list-style: none;
     display: flex;
     flex-grow: 1;
-    gap: 1em;
+    gap: 1.5em;
 
 
 }
@@ -46,7 +47,7 @@
 }
 .nav__list>li>a {
     text-decoration: none;
-    color: black;
+    color:rgba(0, 0, 0, 0.75);
  
 }
 
