--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   margin: 0;
 }
 body {
-
+  color:rgba(0, 0, 0, 0.70);
   margin: 0;
   font-family: 'iCielMedium',-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
