--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,8 +1,7 @@
 .Header {
+
     position: fixed;
     padding: 1em;
-    background-color: transparent;
-    background: none;
     z-index: 100;
     display: flex;
     width: 100%;
@@ -28,16 +27,21 @@
 .nav{
     padding: 2px;
     display: flex;    
-    flex-grow: 1;
+    width: 100%;
     align-items: center;
+
+    margin-right: 2em;
 }
 .nav__list{
     
     list-style: none;
     display: flex;
-    flex-grow: 1;
+    justify-content: flex-end;
     gap: 1.5em;
 
+    flex-grow: 1;
+    margin-left: 2em;
+    margin-right: 1em;
 
 }
 .nav__list li {
@@ -51,16 +55,16 @@
  
 }
 
+.tesla-logo{
+    
+    margin-right: auto;
+}
 .nav__list li:nth-of-type(1){
     margin-left: auto;
 }
 
-.nav__list li:nth-of-type(7){
 
-    margin-left: auto;
+.nav__list li:nth-of-type(6){
+    margin-right: auto;
 }
 
-.nav__list li:nth-of-type(8){
-
-    margin-right: 2em;
-}
